--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Neighborhood-Map</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <div class="container">
-          <div class="options-box">
-            <h1>Silicon Valley News</h1>
-            <div>
-              <span class="text">See what's happening here</span>
-              <input id="corporations-search" type="text" placeholder="Ex: Udacity">
-              <input id="search-news" type="button" value="Search">
-            </div>
-          </div>
-          <div id="map"></div>
+  <head>
+    <meta charset="utf-8">
+    <title>Neighborhood-Map</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="options-box">
+        <h1>Silicon Valley News</h1>
+        <div>
+          <span class="text">See what's happening here</span>
+          <input id="corporations-search" type="text" placeholder="Ex: Udacity">
+          <input id="search-news" type="button" value="Search">
         </div>
+        <div>
+          <ul data-bind = "foreach: { data: locationsArray }">
+            <li data-bind = "text: title" ></li>
+          </ul>
+        </div>
+      </div>
+      <div id="map"></div>
+    </div>
 
-        <script src="js/lib/knockout-3.2.0.js"></script>
-        <script src="js/map.js"></script>
+    <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="js/models/map.js"></script>
+    <script src="js/map.js"></script>
 
-        <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyAQnAaYwkd-JCZyKEB2gt6U7AKhTVQga_g&v=3&callback=initMap">
-        </script>
-    </body>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyAQnAaYwkd-JCZyKEB2gt6U7AKhTVQga_g&v=3&callback=initMap">
+    </script>
+  </body>
 </html>
