--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>Silicon Valley News</h1>
         <div>
           <span class="text">See what's happening here</span>
-          <input id="corporations-search" type="text" placeholder="Ex: Udacity" >
+          <input id="corporations-search" type="text" placeholder="Ex: Udacity" data-bind="value: filter, valueUpdate: 'afterkeydown'" >
           <input id="search-news" type="button" value="Search">
         </div>
         <div>
-          <ul data-bind = "foreach: companiesList">
+          <ul data-bind = "foreach: filteredItems">
             <li data-bind = "text: title, click: $parent.toCompany" ></li>
           </ul>
         </div>
@@ -23,6 +23,7 @@
       <div id="map"></div>
     </div>
 
+    <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/models/map.js"></script>
     <script src="js/map.js"></script>
